test_regress/t/t_increment_bad.out
%Error-UNSUPPORTED: t/t_increment_bad.v:19:29: Unsupported: Incrementation in this context.
   19 |     if (0 && test_string[pos++] != "e");
      |                             ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_increment_bad.v:20:17: Unsupported: Incrementation in this context.
   20 |     if (1 || pos-- != 1);
      |                 ^~
%Error-UNSUPPORTED: t/t_increment_bad.v:22:15: Unsupported: Incrementation in this context.
   22 |     if (a <-> --b);
      |               ^~
%Error-UNSUPPORTED: t/t_increment_bad.v:23:14: Unsupported: Incrementation in this context.
   23 |     if (0 -> ++b);
      |              ^~
%Error-UNSUPPORTED: t/t_increment_bad.v:25:22: Unsupported: Incrementation in this context.
   25 |     pos = (a > 0) ? a++ : --b;
      |                      ^~
%Error-UNSUPPORTED: t/t_increment_bad.v:25:27: Unsupported: Incrementation in this context.
   25 |     pos = (a > 0) ? a++ : --b;
      |                           ^~
%Error-UNSUPPORTED: t/t_increment_bad.v:30:36: Unsupported: Incrementation in this context.
   30 |   assert property (@(posedge clk) a++ >= 0);
      |                                    ^~
%Error: Exiting due to
